[package]
name = "rust-poker"
version = "0.1.0"
edition = "2024"

[dependencies]
async-io = "2.4.0"
async-std = "1.13.1"
futures-lite = "2.6.0"
rand = "0.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.104"
tokio = {version = "1.45.0", features = ["full"]}
trpl = "0.2.0"
